[FEATURE] tags on model group&version #1303 tags operation on model group
Signed-off-by: Frank Woo(吴峻申) <frank_wjs@hotmail.com>